2010-09-13  Vadim Kurland  <vadim@vk.crocodile.org>

	* VERSION (LIBFWBUILDER_MICRO_VERSION): started 4.1.2

2010-08-20  Vadim Kurland  <vadim@fwbuilder.org>

	* v4.1.1 released

2010-08-19  Vadim Kurland  <vadim@vk.crocodile.org>

	* Compiler.cpp (Compiler::_expandAddressRanges): fixed
	fwbuilder:ticket:1696 "Compiler ignores, but provides no warning,
	about rules with invalid address range being
	skipped". AddressRange object in the ticket had start address
	greater than the end address.

	* NATCompiler.cpp (classifyNATRule::processNext):
	fixed fwbuilder:ticket:1685 "iptables redirecting NAT
	rules in the OUTPUT chain". NAT rules should be allowed to
	translate from CustomService to TCP or UDP service, provided
	CustomService object is configured with matching protocol.

2010-08-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* set version to 4.1.1

2010-08-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* v4.1.0 released

2010-08-09  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectGroup.cpp (validateChild): fixed fwbuilder:ticket:1679
	"Group allows invalid objects to be added (Policy, NAT, Routing)".
	Change done in ObjectGroup and ServiceGroup.

2010-06-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectMatcher.cpp (ObjectMatcher::checkComplexMatchForSubnet):
	added method to check object matching with subnets

2010-06-12  Vadim Kurland  <vadim@vk.crocodile.org>

	* CustomService.cpp (CustomService::CustomService): fixed missing
	class variable initialization.

	* FWObjectDatabase.cpp (FWObjectDatabase::setPredictableIds):
	this method is used to replace random string object ids with
	predictable ones; useful for unit tests because it allows us
	to create data files that can be compared. 
	Fixes fwbuilder:ticket:1517

	* FWReference.cpp (FWReference::toXML): always use int id when
	saving to xml. This allows us to change string ids if necessary
	using call to FWObjectDatabase::changeStringId() and it will